<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="user_profile">User Profile</string>
    <string name="search_your_travel_mate">Search Your Travel mate</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="travel_buddy">Travel Buddy</string>
    <string name="find_your_perfect_travel_buddy_with_us">Find Your Perfect Travel Buddy with Us</string>
    <string name="buddy_image">buddy Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="travel_from">Travel from :</string>
    <string name="travel_to">Travel to :</string>
    <string name="find_your_buddies">Find Your Buddies</string>
    <string name="your_buddies_are">Your Buddies Are :</string>
    <string name="welcome_to_travel_buddy">Welcome To Travel Buddy</string>
    <string name="fill_the_details_of_your_journey">Fill the details of Your Journey</string>
    <string name="buddy_name">Buddy Name</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>
    <string name="unknown_sender">Unknown Sender</string>
    <string name="chat">chat</string>
    <string name="chats">Chats</string>
    <string name="contact">Contact</string>
    <string name="about_us">About Us</string>
    <string name="add_photo">Add Photo</string>
    <string name="remove">Remove</string>
    <string name="account_information">Account Information</string>
    <string name="username_johndoe123">Username: johndoe123</string>
    <string name="email_john_example_com">Email: john@example.com</string>
    <string name="additional_information">Additional Information</string>
    <string name="tell_us_about_yourself">Tell us about yourself...</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_">Profile</string>
    <string name="username_john_doe123">username_john_doe123</string>
</resources>