<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/friends"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"

        >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/new_menu">
            <TextView
                android:id="@+id/m_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_travel_buddy"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:padding="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="24sp">

            </TextView>
        </com.google.android.material.appbar.MaterialToolbar>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"

            android:layout_marginBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fill_the_details_of_your_journey"
                    android:textColorHint="@color/black"
                    android:textSize="24sp"
                    android:padding="12dp"

                    >

                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/travel_from"
                    app:boxBackgroundMode="none">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/travel_from"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/travel_to"
                    app:boxBackgroundMode="none">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/travel_to"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/findBuddiesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/find_your_buddies"
                    android:textColorHint="@color/blue" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_gravity="center"
            app:cardCornerRadius="12dp"
            android:layout_marginBottom="12dp"
            ><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_buddies_are"
                android:layout_gravity="center"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#400000FF"
            >

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>